[package]
name = "aoc21"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.11", features = ["derive"] }
itertools = "0.10.5"
num = "0.4.0"
queues = "1.1.0"
serde = "1.0.160"
serde_derive = "1.0.160"
serde_json = "1.0.96"
