[package]
name = "aoc21"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
array_tool = "1.0.3"
clap = { version = "4.1.11", features = ["derive"] }
env_logger = "0.10.0"
gag = "1.0.0"
good_lp = { version = "*", features = ["lpsolve"], default-features = false }
hashbrown = "0.13.2"
itertools = "0.10.5"
json_to_table = "0.4.0"
log = "0.4.17"
num = "0.4.0"
priority-queue = "1.3.1"
queues = "1.1.0"
regex = "1.7.3"
serde = "1.0.160"
serde_derive = "1.0.160"
serde_json = "1.0.96"
